# av-efi-schema

./: .gitignore  404.html  CHANGELOG.md  LICENSE  License.txt  README.md  av_efi_schema.json  av_efi_schema.md  av_efi_schema.py  av_efi_schema.ts  av_efi_schema.yaml  av_efi_schema_item.json  av_efi_schema_manifestation.json  av_efi_schema_utils.ts  av_efi_schema_workvariant.json  avefi_er_diagram.md  dodo.py  index.html  mkdocs.yml  pyproject.toml  sample_data.json  sample_data.ttl  sample_data.yaml  schema_item.rst  schema_manifestation.rst  schema_work.md  schema_work.rst  sitemap.xml  zensical.toml
.github/: dependabot.yml
AATID/: index.html
AATResource/: index.html
AVefi/: index.html
AVefiCurie/: index.html
AVefiResource/: index.html
Activity/: index.html
ActivityTypeEnum/: index.html
Agent/: index.html
AgentTypeEnum/: index.html
AnimationActivity/: index.html
AnimationActivityTypeEnum/: index.html
Audio/: index.html
AuthorityResource/: index.html
Boolean/: index.html
CastActivity/: index.html
CastActivityTypeEnum/: index.html
CategorizedThing/: index.html
CensorshipActivity/: index.html
CensorshipActivityTypeEnum/: index.html
CinematographyActivity/: index.html
CinematographyActivityTypeEnum/: index.html
ColourTypeEnum/: index.html
Controlled_Vocabularies/: README.md  item_10.3.2_sourceAttributionType.json  item_2_physicalDescription.json  item_3_specificCarrierType.json  item_4_preservationStatus.json  item_9_languageVersion.json  manifestation_4.1_titleType.json  manifestation_7_manifestationType.json  manifestation_9.3.2_sourceAttributionType.json  work_1.1_seriesTitleType.json  work_1.1_titleType.json  work_11.3_yearOfReferenceType.json  work_12_genre.json  work_14.3.2_sourceAttributionType.json  work_16_subject.json  work_2.2.1_seriesTitleType.json  work_4.2_creditsRole.json  work_7.1_audioMaterialFormat.json  work_7.2_audioMaterialType.json  work_7.3_videoMaterialFormat.json  work_7.4_videoMaterialType.json  work_8.1_originalLengthUnit.json
CopyrightAndDistributionActivity/: index.html
CopyrightAndDistributionActivityTypeEnum/: index.html
Curie/: index.html
DOI/: index.html
DOIResource/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
DescriptionResource/: index.html
DigitalFile/: index.html
DigitalFileEncoding/: index.html
DirectingActivity/: index.html
DirectingActivityTypeEnum/: index.html
Double/: index.html
Duration/: index.html
EIDR/: index.html
EIDRResource/: index.html
EditingActivity/: index.html
EditingActivityTypeEnum/: index.html
Entity/: index.html
Event/: index.html
(+414 files in other folders)
