[project]
name = "avefi_schema"
version = "0.1.0"
description = "Schema for persistent film identifiers developed in the AVefi project"
authors = [
    {name = "AVefi Working Group", email = "contact@av-efi.net"},
]
dependencies = [
    "pydantic>=2.11.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
docs = [
    "linkml>=1.8.0",
    "mkdocs-material>=9.5.17",
]
dataclasses = [
    "linkml-runtime>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "project/python"

[dependency-groups]
dev = [
    "linkml>=1.8.0",
    "mkdocs-material>=9.5.17",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "schemasheets>=0.2.1",
    "doit>=0.36.0",
    "ruamel-yaml>=0.18.6",
    "requests>=2.32.3",
    "mkdocs-redirects>=1.2.2",
]
