[project]
name = "avefi_schema"
version = "0.1.0"
description = "Schema for persistent film identifiers developed in the AVefi project"
authors = [
    {name = "AVefi Working Group", email = "contact@av-efi.net"},
]
dependencies = [
    "pydantic>=2.13.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dataclasses = [
    "linkml-runtime>=1.8.0",
]

[build-system]
requires = ["uv_build>=0.10,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "project/python"

[dependency-groups]
dev = [
    "linkml>=1.10.0",
    "doit>=0.36.0",
    "ruamel-yaml>=0.18.6",
    "requests>=2.32.3",
    "deepdiff>=7.0.1",
    "zensical>=0.0.9",
]
docs = [
    "doit>=0.36.0",
    "linkml>=1.10.0",
    "zensical>=0.0.9",
]
